--- a/home.css
+++ b/home.css
@@ -332,3 +332,9 @@ body {
     margin-top: 100px;
     align-items: center;
 }
+
+#asicsh {
+    color: black;
+    margin-top: 100px;
+    align-items: center;
+}
