--- a/home.css
+++ b/home.css
@@ -373,6 +373,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
     margin: 0 0;
 }
@@ -380,6 +381,8 @@ body {
 .footer-links .menus {
     display: flex;
     gap: 40px;
+    justify-content: center;
+    width: 100%;
 }
 
 .footer-links ul {
